Implement code changes to enhance functionality and improve performance

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,45 @@
+/* === Public Sans === */
+@font-face {
+  font-family: "Public Sans";
+  src: url("/fonts/public-sans-v18-latin-regular.woff2") format("woff2");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Public Sans";
+  src: url("/fonts/public-sans-v18-latin-italic.woff2") format("woff2");
+  font-weight: 400;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Public Sans";
+  src: url("/fonts/public-sans-v18-latin-700.woff2") format("woff2");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+/* === Rubik === */
+@font-face {
+  font-family: "Rubik";
+  src: url("/fonts/rubik-v28-latin-500.woff2") format("woff2");
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Rubik";
+  src: url("/fonts/rubik-v28-latin-600.woff2") format("woff2");
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
 /* Global variables */
 :root {
   /* Colors */
