--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,37 +1,43 @@
 ---
 import { getCollection } from "astro:content";
-
-// Layout import — provides basic page elements: <head>, <nav>, <footer> etc.
 import BaseLayout from "../layouts/BaseLayout.astro";
-
-// Component Imports
+import MainHead from "../components/MainHead.astro";
 import CallToAction from "../components/CallToAction.astro";
 import Grid from "../components/Grid.astro";
 import Hero from "../components/Hero.astro";
 import Icon from "../components/Icon.astro";
 import Pill from "../components/Pill.astro";
 import PortfolioPreview from "../components/PortfolioPreview.astro";
-
-// Page section components
 import ContactCTA from "../components/ContactCTA.astro";
 import Skills from "../components/Skills.astro";
 
-// Content Fetching: List four most recent work projects
+// Busca e ordena os 4 projetos mais recentes
 const projects = (await getCollection("work"))
   .sort((a, b) => b.data.publishDate.valueOf() - a.data.publishDate.valueOf())
   .slice(0, 4);
 
-// Full Astro Component Syntax:
-// https://docs.astro.build/basics/astro-components/
+// Frontmatter para meta tags
+export const frontmatter = {
+  title: "Olá, je m'appelle Diogo – Portfolio",
+  description: "Développement web en Haute-Corse, solutions Astro.js & Vercel.",
+  image: "/assets/og/home-preview.png",
+};
 ---
 
 <BaseLayout>
+  <!-- Insere aqui as meta tags OG/Twitter -->
+  <MainHead
+    title={frontmatter.title}
+    description={frontmatter.description}
+    image={frontmatter.image}
+  />
+
   <div class="stack gap-20 lg:gap-48">
     <div class="wrapper stack gap-8 lg:gap-20">
       <header class="hero">
         <Hero
-          title="Olá, je m'appelle Diogo "
-          tagline="Passionné par le développement web, je crée des solutions innovantes,en Haute-Corse."
+          title="Olá, je m'appelle Diogo"
+          tagline="Passionné par le développement web, je crée des solutions innovantes, en Haute-Corse."
           align="start"
         >
           <div class="roles">
@@ -45,10 +51,7 @@ const projects = (await getCollection("work"))
 
         <img
           src="/assets/portrait.webp"
-          srcset="
-    /assets/portrait-300w.webp 300w,
-    /assets/portrait.webp 400w
-  "
+          srcset="/assets/portrait-300w.webp 300w, /assets/portrait.webp 400w"
           sizes="(max-width: 768px) 100vw, 300px"
           width="300"
           height="400"
@@ -63,6 +66,7 @@ const projects = (await getCollection("work"))
     </div>
 
     <main class="wrapper stack gap-20 lg:gap-48">
+      <!-- Seção Réalisations -->
       <section class="section with-background with-cta">
         <header class="section-header stack gap-2 lg:gap-4">
           <h3>Mes Réalisations</h3>
@@ -86,12 +90,12 @@ const projects = (await getCollection("work"))
 
         <div class="cta">
           <CallToAction href="/work/">
-            Voir tout
-            <Icon icon="arrow-right" size="1.2em" />
+            Voir tout <Icon icon="arrow-right" size="1.2em" />
           </CallToAction>
         </div>
       </section>
 
+      <!-- Seção Compétences -->
       <section class="section with-background bg-variant">
         <header class="section-header stack gap-2 lg:gap-4">
           <h3>Compétences Techniques</h3>
@@ -125,30 +129,12 @@ const projects = (await getCollection("work"))
                   tech: "Git (GitHub, GitLab, etc)",
                   logo: "/assets/icons/git-original.svg",
                 },
-                {
-                  tech: "Symfony",
-                  logo: "/assets/icons/symfony-original.png",
-                },
-                {
-                  tech: "Next.js",
-                  logo: "/assets/icons/nextjs-original.svg",
-                },
-                {
-                  tech: "React.js",
-                  logo: "/assets/icons/react-original.svg",
-                },
-                {
-                  tech: "Astro.js",
-                  logo: "/assets/icons/astro-original.png",
-                },
-                {
-                  tech: "Sass",
-                  logo: "/assets/icons/sass-original.svg",
-                },
-                {
-                  tech: "Less",
-                  logo: "/assets/icons/less-original.svg",
-                },
+                { tech: "Symfony", logo: "/assets/icons/symfony-original.png" },
+                { tech: "Next.js", logo: "/assets/icons/nextjs-original.svg" },
+                { tech: "React.js", logo: "/assets/icons/react-original.svg" },
+                { tech: "Astro.js", logo: "/assets/icons/astro-original.png" },
+                { tech: "Sass", logo: "/assets/icons/sass-original.svg" },
+                { tech: "Less", logo: "/assets/icons/less-original.svg" },
                 {
                   tech: "Elementor",
                   logo: "/assets/icons/elementor-original.png",
@@ -163,7 +149,6 @@ const projects = (await getCollection("work"))
                     loading="lazy"
                     decoding="async"
                   />
-
                   <p>{item.tech}</p>
                 </li>
               ))
@@ -176,157 +161,3 @@ const projects = (await getCollection("work"))
     <ContactCTA />
   </div>
 </BaseLayout>
-
-<style>
-  .hero {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 2rem;
-  }
-
-  .roles {
-    display: none;
-  }
-
-  .hero img {
-    aspect-ratio: 5 / 4;
-    object-fit: cover;
-    object-position: top;
-    border-radius: 1.5rem;
-    box-shadow: var(--shadow-md);
-  }
-
-  @media (min-width: 50em) {
-    .hero {
-      display: grid;
-      grid-template-columns: 6fr 4fr;
-      padding-inline: 2.5rem;
-      gap: 3.75rem;
-    }
-
-    .roles {
-      margin-top: 0.5rem;
-      display: flex;
-      gap: 0.5rem;
-    }
-
-    .hero img {
-      aspect-ratio: 3 / 4;
-      border-radius: 4.5rem;
-      object-fit: cover;
-    }
-  }
-
-  /* ====================================================== */
-
-  .section {
-    display: grid;
-    gap: 2rem;
-  }
-
-  .with-background {
-    position: relative;
-  }
-
-  .with-background::before {
-    --hero-bg: var(--bg-image-subtle-2);
-
-    content: "";
-    position: absolute;
-    pointer-events: none;
-    left: 50%;
-    width: 100vw;
-    aspect-ratio: calc(2.25 / var(--bg-scale));
-    top: 0;
-    transform: translateY(-75%) translateX(-50%);
-    background:
-      url("/assets/backgrounds/noise.webp") top center/220px repeat,
-      var(--hero-bg) center center / var(--bg-gradient-size) no-repeat,
-      var(--gray-999);
-    background-blend-mode: overlay, normal, normal, normal;
-    mix-blend-mode: var(--bg-blend-mode);
-    z-index: -1;
-  }
-
-  .with-background.bg-variant::before {
-    --hero-bg: var(--bg-image-subtle-1);
-  }
-
-  .section-header {
-    justify-self: center;
-    text-align: center;
-    max-width: 50ch;
-    font-size: var(--text-md);
-    color: var(--gray-300);
-  }
-
-  .section-header h3 {
-    font-size: var(--text-2xl);
-  }
-
-  @media (min-width: 50em) {
-    .section {
-      grid-template-columns: repeat(4, 1fr);
-      grid-template-areas: "header header header header" "gallery gallery gallery gallery";
-      gap: 5rem;
-    }
-
-    .section.with-cta {
-      grid-template-areas: "header header header cta" "gallery gallery gallery gallery";
-    }
-
-    .section-header {
-      grid-area: header;
-      font-size: var(--text-lg);
-    }
-
-    .section-header h3 {
-      font-size: var(--text-4xl);
-    }
-
-    .with-cta .section-header {
-      justify-self: flex-start;
-      text-align: left;
-    }
-
-    .gallery {
-      grid-area: gallery;
-    }
-
-    .cta {
-      grid-area: cta;
-    }
-  }
-
-  /* ====================================================== */
-
-  .tech-logo {
-    width: 70px;
-    height: 70px;
-    margin-bottom: 0.75rem;
-  }
-
-  .mention-card {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    border: 1px solid var(--gray-800);
-    border-radius: 1.5rem;
-    padding: 1rem;
-    color: var(--gray-300);
-    background: var(--gradient-subtle);
-    box-shadow: var(--shadow-sm);
-  }
-  .mention-card p {
-    font-size: 1.05rem;
-  }
-
-  @media (min-width: 50em) {
-    .mention-card {
-      border-radius: 1.5rem;
-      padding: 1.5rem;
-    }
-  }
-</style>
