--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -15,10 +15,7 @@ const { title, description, image } = Astro.props as Props;
 <html lang="fr">
   <head>
     <!-- 1. Google Analytics 4 -->  
-    <script  
-      async  
-      src="https://www.googletagmanager.com/gtag/js?id=G-BW59KRZV4Y"  
-    ></script>  
+    <script is:inline async src="https://www.googletagmanager.com/gtag/js?id=G-BW59KRZV4Y"></script>
     <script is:inline>  
       window.dataLayer = window.dataLayer || [];  
       function gtag(){dataLayer.push(arguments);}  
